project-almost-done

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 
         <!-- <button>Count is <span></span></button> -->
 
-        <div class="count-button">Count is <span>0</span></div>
+        <div class="count-button">Count is <span id="numberInc">0</span></div>
 
         <p>Edit src/App.jsx and save to test HMR</p>
 
-        <span>Click on <a href="https://vitejs.dev/" target="_blank">Vite</a> and <a href="https://react.dev/" target="_blank">React</a> logos to learn more.</span>
+        <span class="last-line">Click on <a href="https://vitejs.dev/" target="_blank">Vite</a> and <a href="https://react.dev/" target="_blank">React</a> logos to learn more.</span>
 
     </div>
 
