--- a/index.html
+++ b/index.html
@@ -16,15 +16,13 @@
 
     <div class="container">
         <div class="images">
-            <img src="React-icon.svg.png" alt="reactjs-image-not-loading" class="reactjs-image">
-            <img src="vitejs.svg" alt="vite-image-not-loading" class="vite-image">
+            <img src="React-icon.svg.png" title="ReactJs" alt="reactjs-image-not-loading" class="reactjs-image">
+            <img src="vitejs.svg" title="Vite" alt="vite-image-not-loading" class="vite-image">
         </div>
 
         <div class="heading">
-            <pre>Reactjs  +  Vite</pre>
+            <pre>React + Vite</pre>
         </div>
-
-        <!-- <button>Count is <span></span></button> -->
 
         <div class="count-button">Count is <span id="numberInc">0</span></div>
 
